--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Domains Checker</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
@@ -13,6 +13,7 @@
 </head>
 <body>
     <textarea name="" id="domains" rows="10"></textarea>
+    <button id="reload">Reload</button>
 
     <div>
         <div id="pages" class="row">
@@ -21,6 +22,11 @@
     </div>
 
     <script>
+        $('#reload').on('click', () => {
+            console.log(123)
+            $('#domains').trigger("change")
+        })
+
         $('#domains').on('change', () => {
             $('#pages').html("");
             var lines = $('#domains').val().split('\n');
