update class button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <textarea name="" id="domains" rows="10"></textarea>
-    <button id="reload">Reload</button>
+    <button id="reload" class="btn btn-primary">Reload</button>
 
     <div>
         <div id="pages" class="row">
